updated assignment for corrections

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4a3485d6-ba58-4660-a983-5680821c5719",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "[178 rows x 14 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "56916892",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
        "178"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "df0ef103",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "14"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "47989426",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "(dtype('int32'), array([0, 1, 2]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "bd7b0910",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
        "13"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "cc899b59",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "5ef2d5ad",
    "metadata": {},
    "outputs": [],
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "78a88a6e",
    "metadata": {},
    "outputs": [
@@ -629,10 +629,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train shape:  (133, 13)\n",
-      "X_test shape:  (45, 13)\n",
-      "y_train shape:  (133,)\n",
-      "y_test shape:  (45,)\n"
+      "X_train shape:  (130, 14)\n",
+      "X_test shape:  (48, 14)\n"
      ]
     }
    ],
@@ -640,14 +638,19 @@
     "# Create a random vector of True and False values to split the data\n",
     "split = np.random.choice([True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25])\n",
     "\n",
-    "# Your code here...\n",
-    "X_train, X_test, y_train, y_test = train_test_split(predictors_standardized, wine_df['class'], test_size=0.25, random_state=123)\n",
+    "# Create train set\n",
+    "#X_train, X_test, y_train, y_test = train_test_split(predictors_standardized, wine_df['class'], test_size=0.25, random_state=123)\n",
+    "#corrected\n",
+    "X_train = predictors_standardized[split]\n",
+    "X_train = pd.concat([X_train, wine_df['class'][split]], axis=1)\n",
+    "\n",
+    "# Create test set\n",
+    "X_test = predictors_standardized[~split]\n",
+    "X_test = pd.concat([X_test, wine_df['class'][~split]], axis=1)\n",
     "\n",
     "# Display the shapes of the resulting datasets\n",
     "print(\"X_train shape: \", X_train.shape)\n",
-    "print(\"X_test shape: \", X_test.shape)\n",
-    "print(\"y_train shape: \", y_train.shape)\n",
-    "print(\"y_test shape: \", y_test.shape)"
+    "print(\"X_test shape: \", X_test.shape)\n"
    ]
   },
   {
@@ -670,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "08818c64",
    "metadata": {},
    "outputs": [
@@ -678,7 +681,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best n_neighbors:  15\n"
+      "Best n_neighbors:  22\n"
      ]
     }
    ],
@@ -687,13 +690,22 @@
     "knn = KNeighborsClassifier()\n",
     "\n",
     "# 2. Define a parameter grid for `n_neighbors` ranging from 1 to 50.\n",
-    "param_grid = {'n_neighbors': range(1, 51)}\n",
+    "paramtr_grid = {'n_neighbors': range(1, 51, 1)}\n",
     "\n",
     "# 3. Implement a grid search using `GridSearchCV` with 10-fold cross-validation to find the optimal number of neighbors.\n",
-    "grid_search = GridSearchCV(knn, param_grid, cv=10, scoring='accuracy')\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator=knn, param_grid=paramtr_grid, cv=10)\n",
     "\n",
     "# 4. After fitting the model on the training data, identify and return the best value for `n_neighbors` based on the grid search results.\n",
-    "grid_search.fit(X_train, y_train)\n",
+    "#grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "#corrected\n",
+    "grid_search.fit(\n",
+    "    X_train.iloc[:, :-1],     \n",
+    "    X_train['class']\n",
+    ")\n",
+    "\n",
+    "accuracy = pd.DataFrame(grid_search.cv_results_).sort_values('rank_test_score').iloc[0]['mean_test_score']\n",
     "best_n_neighbors = grid_search.best_params_['n_neighbors']\n",
     "print(\"Best n_neighbors: \", best_n_neighbors)"
    ]
@@ -711,12 +723,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ffefa9f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.9791666666666666\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here..."
+    "# compute x and y coordinates for the points\n",
+    "xbest = KNeighborsClassifier(n_neighbors=best_n_neighbors)\n",
+    "X = X_train.iloc[:, :-1]\n",
+    "Y = X_train['class']\n",
+    "xbest.fit(X, Y)\n",
+    "\n",
+    "#using test data\n",
+    "X_pred = xbest.predict(X_test.iloc[:, :-1])\n",
+    "\n",
+    "accuracy = accuracy_score(X_test['class'], X_pred)\n",
+    "\n",
+    "print(\"Accuracy: \", accuracy)"
    ]
   },
   {
