adjusted assignment 2 based on comments

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -557,11 +557,11 @@
    "metadata": {},
    "source": [
     "Associations:\n",
-    "acceleration vs mpg : positive\n",
-    "cylinders vs mpg : negative\n",
-    "displacements vs mpg : negative \n",
-    "hp vs mpg : negative\n",
-    "model-yr vs mpg : positive \n",
+    "acceleration vs mpg : positive |\n",
+    "cylinders vs mpg : negative |\n",
+    "displacements vs mpg : negative | \n",
+    "hp vs mpg : negative |\n",
+    "model-yr vs mpg : positive | \n",
     "weight vs mpg : negative"
    ]
   },
@@ -579,7 +579,7 @@
    "metadata": {},
    "source": [
     "> Your answer here...\n",
-    "Concept of Linear Regression "
+    "Concept of Linear Regression showing MPS associations and various observations:  acceleration, cylinders, displacements, hp, weight "
    ]
   },
   {
